# predic-rust

./: .env  .gitignore  Cargo.toml  Dockerfile  bash_predic.sh  buy.sh  canister.Dockerfile  canister_ids.json  charge.sh  demo.sh  demo_icp.sh  dfx.json  dfx.sh  docker-compose.yaml  frontend.sh  frontend_update.sh  package-lock.json  predic.sh  predic_update.sh  start.sh  transfer.sh
.dfx/local/: canister_ids.json  network-id
.dfx/local/canisters/ledger/: constructor.did
.dfx/local/canisters/predic/: constructor.did  constructor.old.did  index.js  predic.wasm  service.did  service.did.d.ts  service.did.js
.dfx/local/lsp/: bd3sg-teaaa-aaaaa-qaaba-cai.did
defi/: Makefile  dfx.json
defi/scripts/: deploy_dip20.sh  install.sh
icp_transfer/: Cargo.toml
predic/: Cargo.toml
predic/src/: http.rs  lib.rs
scripts/: blobToHex.js  buy.sh  charge.sh  frontend.sh  frontend_serve.sh  online.sh  online_update.sh  predic.sh  predic_balance.sh  predic_remaing.sh  predic_update.sh  start.sh  withdraw.sh
scripts/mainnet/: buy.sh  deploy.sh  frontend_update.sh  predic_modify.sh  predic_update.sh
src/dip721/: Cargo.toml  predic copy.did  predic.did
src/dip721/src/: http.rs  lib.rs  types.rs  utils.rs
src/frontend/: package-lock.json  package.json
src/frontend/declarations/ledger/: ledger.did.d.ts
src/frontend/declarations/predic/: index.js  predic.did  predic.did.d.ts  predic.did.js
src/frontend/src/: App.svelte  main.js
src/frontend_assets/: global.css  index.html
src/frontend_assets/.well-known/: ic-domains
src/frontend_assets/assets/: star.css
(+14 files in other folders)
