[package]
name = "predic"
version = "0.1.0"
edition = "2018"

[dependencies]
ic-cdk = "0.13"
ic-cdk-macros = "0.13"
ic-ledger-types="0.10.0"
include-base64 = "0.1"
serde = { version = "1", features = ["derive"] }
percent-encoding = "2.1"
ic-certified-map = "0.3"
sha2 = "0.10.2"
serde_cbor = "0.11.2"
base64 = "0.13.0"
candid = "0.10"
num-bigint = "0.4"
num-traits = "0.2.14"
serde_bytes = "0.11"
[lib]
crate-type = ["cdylib"]
